--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -152,7 +152,7 @@ extra:
   og_image_h: 630
   analytics:
     provider: google
-    property: G-0FGVW20H02
+    property: !ENV GOOGLE_ANALYTICS_KEY
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/ayboraa
